# MedSim

./: .gitignore  render.yaml
.devcontainer/: devcontainer.json
clinical-sim-backend-bundle-fresh-20260226-222555/clinical-sim-backend/: .env.example  Dockerfile  MANIFEST.md  README.md  docker-compose.yml  fly.toml  pyproject.toml  railway.toml  simulate.py
clinical-sim-backend-bundle-fresh-20260226-222555/clinical-sim-backend/app/: main.py
clinical-sim-backend-bundle-fresh-20260226-222555/clinical-sim-backend/app/api/: deps.py
clinical-sim-backend-bundle-fresh-20260226-222555/clinical-sim-backend/app/auth/: dependencies.py  routes.py  security.py
clinical-sim-backend-bundle-fresh-20260226-222555/clinical-sim-backend/app/contracts/: backend_api.openapi.yaml  dose_response_engine.config.json  engine_executor_contract.schema.json  medication_library.hypertensive_emergency.json  patient_state.schema.json  runtime_parser_contract.schema.json  tool_action_mapping.htn_enceph_001.json  voice_dialogue_response_contract.schema.json
clinical-sim-backend-bundle-fresh-20260226-222555/clinical-sim-backend/frontend/: admin_inputs.html  educator.html  index.html  m3-theme.css
clinical-sim-backend-bundle-fresh-20260226-222555/clinical-sim-backend/frontend-dist/: index.html
clinical-sim-backend-bundle-fresh-20260226-222555/clinical-sim-backend/frontend-react/: index.html  package-lock.json  package.json  vite.config.ts
clinical-sim-backend-bundle-fresh-20260226-222555/clinical-sim-backend/tests/: test_health.py  test_parser_service.py  test_turns.py
(+68 files in other folders)
