[project]
name = "clinical-sim-backend"
version = "0.2.0"
description = "MedSim — Production-grade medical simulation platform for EM board prep and clinical training"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "pydantic>=2.8.0",
  "pydantic-settings>=2.4.0",
  "python-multipart>=0.0.9",
  "aiofiles>=23.0.0",
  # Phase 1: Database
  "sqlalchemy>=2.0.0",
  # Phase 1: Auth
  "python-jose[cryptography]>=3.3.0",
  "passlib[bcrypt]>=1.7.4",
  "bcrypt>=4.0.0",
  "email-validator>=2.0.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.0",
  "httpx>=0.27.0",
  "ruff>=0.6.0",
  "mypy>=1.11.0"
]
llm = [
  "anthropic>=0.30.0"
]

[tool.setuptools.packages.find]
include = ["app*"]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"
